--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,9 @@ html {
 .productbox img {
   width: 80%;
 }
+.productbox .accessoriesname{
+  text-align: center;
+}
 .productbox span {
   margin-top: 30px;
 }
